--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-<h1> Página web Organizacion campusciff-MiriamAsenjo</h1>
+<h1> P&aacute;gina web Organizacion campusciff-MiriamAsenjo</h1>
 <p>Under construction</p>
 </body>
 </html>
