--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
-
+<!DOCTYPE html> 
+<html lang="en">
+<head>
+<meta charset="utf-8">
+</head>
 <body>
 <h1> P&aacute;gina web Organizacion campusciff-MiriamAsenjo</h1>
 <p>Under construction</p>
