modificación index fork

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1> P&aacute;gina web Organizacion campusciff-MiriamAsenjo</h1>
 <p>Under construction</p>
+<p>Modificaci&oacuten index realizada por Sara Otero de Navascu&eacutes Tom&eacute</p>
 </body>
 </html>
