--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html> 
-<html lang="en">
-<head>
-<meta charset="utf-8">
-</head>
-<body>
-<h1> P&aacute;gina web Organizacion campusciff-MiriamAsenjo</h1>
-<p>Under construction</p>
-<p>Modificaci&oacuten index realizada por Sara Otero de Navascu&eacutes Tom&eacute</p>
-<p>Fork by César Hernández</p>
-</body>
-</html>
+Cambio de Alejandro Diaz
